Fix issue with hover/click animations getting stuck on mobile devices. Fix issue with Masonry failing on License Attribution page. Fix issue with URL hash not updating on About and Portfolio pages. Fix issue with short modal images not centering vertically. Fix issue with modal not dismissing when space below image is clicked. Fix issue with unwanted scrollbars appearing on some modal images. Add CSS style for horizontal scrollbars. Increase height of Change Logs on small screens.

--- a/xcss/width-1-narrow.css
+++ b/xcss/width-1-narrow.css
@@ -37,8 +37,7 @@
 
 /* Change Log */
 .change-log {
-  height: auto;
-  max-height: 100px;
+  max-height: 220px;
 }
 
 div.main-block {
